cluster-operator/istio/istio-lab/istio/route/virtual-service-go.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
