cluster-operator/istio/istio-lab/istio/route/virtual-service-httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: httpbin
    timeout: 500ms
